# coast

./: .gitmodules  .travis.yml  LICENSE  Makefile  README.md
.github/.travis/: build.sh
boards/: program_bit.tcl  pynqrtos
boards/hiFive1/: 99-openocd.rules  README  openocd_hifive1.cfg
boards/tms1224/: load_program.js  targetConfig.ccxml
boards/tms4357/: load_program.js
docs/: .readthedocs.yaml
docs/source/: cfcss.rst  conf.py  eclipse.rst  fault_injection.rst  index.rst  make_system.rst  passes.rst  release_notes.rst  repl_scope.rst  setup.rst  substitutions.inc  tests.rst  troubleshooting.rst
llvm/: .clang-format  CMakeLists.txt  CREDITS.TXT  README.txt
llvm/bindings/: LLVMBuild.txt
llvm/cmake/: config-ix.cmake
llvm/docs/: Atomics.rst  BigEndianNEON.rst  BitCodeFormat.rst  Bugpoint.rst  CMake.rst  CMakeLists.txt  CodeGenerator.rst  CodeOfConduct.rst  CodingStandards.rst  CompilerWriterInfo.rst  CoverageMappingFormat.rst  DebuggingJITedCode.rst  DeveloperPolicy.rst  FAQ.rst  (+30 more)
projects/: .gitignore  CMakeLists.txt
projects/CFCSS/: CFCSS.cpp  CFCSS.h  CMakeLists.txt
projects/DWC/: CMakeLists.txt  DWC.cpp
projects/EDDI/: CMakeLists.txt  EDDI.cpp
projects/TMR/: CMakeLists.txt  TMR.cpp
projects/dataflowProtection/: CMakeLists.txt  COAST.h  cloning.cpp  dataflowProtection.cpp  dataflowProtection.h  functions.config  inspection.cpp  interface.cpp  synchronization.cpp  utils.cpp  verification.cpp
projects/debugStatements/: CMakeLists.txt  debugStatements.cpp
projects/exitMarker/: CMakeLists.txt  exitMarker.cpp
projects/smallProfile/: CMakeLists.txt  smallProfile.cpp
tests/: .gitignore  COAST.h
unittest/: llvm-stress.py  makefile.customFile  pyDriver.py  rtos_test.sh  unittest.py
(+19551 files in other folders)
